--- a/style.css
+++ b/style.css
@@ -102,6 +102,9 @@ header {
 .dropdown {
     width: 60%;
     font-weight: 600;
+    background: var(--background-el);
+    cursor: pointer;
+    position: relative;
 }
 
 .filter-title {
@@ -109,13 +112,24 @@ header {
 }
 
 .dropdown ul {
+    background: inherit;
     margin-top: .5rem;
     padding: 1rem;
     display: none;
+    padding: 1rem 2rem;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    z-index: 100;
 }
 
-.modal {
-    display: none;
+li {
+    padding-block: .5rem;
+}
+
+.dropdown.open ul {
+	display: block;
 }
 
 /* Country List styles */
@@ -126,7 +140,7 @@ header {
 
 .country-card {
     margin-bottom: 2.5rem;
-    border-radius: 10px;
+    border-radius: 5px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
@@ -136,5 +150,19 @@ header {
 
 .info {
     padding: 2rem 1.5rem;
+}
+
+.country-name {
+    padding-bottom: 1.5rem;
+}
+
+.info > p {
+    padding-bottom: .5rem;
+}
+
+/* Modal Section */
+
+.modal {
+    display: none;
 }
 
