added modal and styles

--- a/style.css
+++ b/style.css
@@ -166,3 +166,46 @@ li {
     display: none;
 }
 
+.modal-container {
+    padding: 2rem 1rem;
+}
+
+.close-btn {
+    background: var(--background-el);
+    font-size: 1rem;
+    border: none;
+    padding: .5rem 2rem;
+}
+
+.fa-solid {
+    margin-right: .5rem;
+}
+
+.modal-content {
+    margin-top: 4rem;
+}
+
+.flag-section {
+    margin-bottom: 2.5rem;
+}
+
+.country-name {
+    font-size: 1.2rem;
+    margin-bottom: 1rem;
+}
+
+.country-details h3 {
+    font-weight: 600;
+    padding-bottom: .5rem;
+}
+
+.country-details {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 3rem;
+}
+
+.details-1 {
+    padding-bottom: 3rem;
+}
+
