--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@
     --body: hsl(0, 0%, 98%);
 }
 
+/* Default Styles and Classes */
+
 * {
     margin: 0;
     padding: 0;
@@ -20,7 +22,7 @@ body {
 
 body.dark {
     --body: hsl(207, 26%, 17%);
-    color: var(--body);
+    color: hsl(0, 0%, 98%);
     --background-el: hsl(209, 23%, 22%);
 }
 
@@ -73,6 +75,10 @@ header {
     font-size: 1.2rem;
 }
 
+.theme-btn {
+    color: inherit;
+}
+
 .container {
     width: 90%;
     margin: 0 auto;
@@ -97,6 +103,7 @@ header {
     border: none;
     padding-left: .5rem;
     color: hsl(0, 0%, 52%);
+    background: none;
 }
 
 .dropdown {
@@ -108,7 +115,15 @@ header {
 }
 
 .filter-title {
+    font-size: 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     padding: 1rem;
+}
+
+.fa-chevron-down {
+    margin-left: 20px;
 }
 
 .dropdown ul {
@@ -175,6 +190,7 @@ li {
     font-size: 1rem;
     border: none;
     padding: .5rem 2rem;
+    color: inherit;
 }
 
 .fa-solid {
@@ -209,3 +225,77 @@ li {
     padding-bottom: 3rem;
 }
 
+/* Tablet design */
+
+@media (min-width: 768px) {
+
+    .search-filter {
+        flex-direction: row;
+    }
+
+    .search-input {
+        width: 50%;
+    }
+
+    .dropdown {
+        width: 30%;
+    }
+
+    .dropdown ul {
+        margin-top: 0;
+    }
+
+    .country-lists {
+        display: grid;
+        grid-template-columns: repeat(2, minmax(250px, 1fr));
+        grid-gap: 4rem;
+    }
+
+    .flag-image {
+        height: 250px;
+        object-fit: cover;
+    }
+
+    .modal-container {
+        padding: 3rem;
+    }
+
+    .country-details {
+        flex-direction: row;
+        justify-content: space-between;
+        margin-bottom: 0;
+    }
+}
+
+@media (min-width: 1440px) {
+
+    header {
+        padding-inline: 2rem;
+    }
+
+    .search-input {
+        width: 40%;
+    }
+
+    .dropdown {
+        width: 20%;
+    }
+
+    .country-lists {
+        display: grid;
+        grid-template-columns: repeat(4, minmax(250px, 1fr));
+        grid-gap: 4rem;
+    }
+
+    .modal-content {
+        display: grid;
+        grid-template-columns: repeat(2, minmax(250px, 1fr));
+        grid-gap: 4rem;
+    }
+
+    .country-info {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+}
